RESOLVED FIXED239031
Removing x-webkit-wirelessvideoplaybackdisabled attribute from video does not enable AirPlay
https://bugs.webkit.org/show_bug.cgi?id=239031
Summary Removing x-webkit-wirelessvideoplaybackdisabled attribute from video does not...
Jeff Johnson
Reported 2022-04-09 08:22:23 PDT
Created attachment 457165 [details] Sample HTML illustrating the bug A <video> with the attribute x-webkit-wirelessvideoplaybackdisabled cannot AirPlay. However, if the attribute is removed from the <video>, it still cannot AirPlay, and the property webkitWirelessVideoPlaybackDisabled remains true and cannot be set to false. This bug with x-webkit-wirelessvideoplaybackdisabled is in contrast with the attribute disableremoteplayback, which also disables AirPlay, but AirPlay is successfully re-enabled when disableremoteplayback is removed from the <video>. I've reproduced the x-webkit-wirelessvideoplaybackdisabled bug with Safari Version 15.4 (16613.1.17.1.13, 16613) and Safari Technology Preview Release 143 (Safari 15.4, WebKit 16614.1.7.7) on macOS 11.6.5.
Attachments
Sample HTML illustrating the bug (726 bytes, text/html)
2022-04-09 08:22 PDT, Jeff Johnson
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-16 08:23:14 PDT
Youssef Soliman
Comment 2 2022-05-02 17:03:29 PDT
EWS
Comment 3 2022-05-05 19:24:12 PDT
Committed r293878 (250336@main): <https://commits.webkit.org/250336@main> Reviewed commits have been landed. Closing PR #461 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.