Removing x-webkit-wirelessvideoplaybackdisabled attribute from video does not enable AirPlay. https://bugs.webkit.org/show_bug.cgi?id=239031

Reviewed by Jer Noble.

* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::setWirelessVideoPlaybackDisabled):
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::setWirelessVideoPlaybackDisabled):
Test: media/airplay-wirelessvideoplaybackdisabled.html
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::attributeChanged):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::parseAttribute):
* LayoutTests/media/airplay-wirelessvideoplaybackdisabled-expected.txt: Added.
* LayoutTests/media/airplay-wirelessvideoplaybackdisabled.html: Added.

Canonical link: https://commits.webkit.org/250336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293878 268f45cc-cd09-0410-ab3c-d52691b4dbfc