Source/WebCore/html/HTMLVideoElement.cpp
@@ -146,10 +146,6 @@ void HTMLVideoElement::parseAttribute(const QualifiedName& name, const AtomStrin
             }
         }
     }
-#if ENABLE(WIRELESS_PLAYBACK_TARGET)
-    else if (name == webkitwirelessvideoplaybackdisabledAttr)
-        mediaSession().setWirelessVideoPlaybackDisabled(true);
-#endif
     else {
         HTMLMediaElement::parseAttribute(name, value);    
 
